Everything working now... mostly

--- a/home/dot_config/gtk-3.0/bookmarks.tmpl
+++ b/home/dot_config/gtk-3.0/bookmarks.tmpl
@@ -6,7 +6,7 @@ file:///home/{{ .chezmoi.username }}/Pictures  Pictures
 file:///home/{{ .chezmoi.username }}/Music  Music
 file:///home/{{ .chezmoi.username }}/Videos  Videos
 file:///home/{{ .chezmoi.username }}/.config .config
-file:///home/{{ .chezmoi.username }}/.local/share  LocalShare
-file:///home/{{ .chezmoi.username }}/.local/share/dots/rices  Rices
-file:///home/{{ .chezmoi.username }}/.local/share/wallpapers  Wallpapers
-file:///home/{{ .chezmoi.username }}/.local/bin  Bin
+file:///home/{{ .chezmoi.username }}/.local/share  .local/share
+file:///home/{{ .chezmoi.username }}/.local/share/dots/rices  .local/share/dots/rices
+file:///home/{{ .chezmoi.username }}/.local/share/wallpapers  .local/share/wallpapers
+file:///home/{{ .chezmoi.username }}/.local/bin  .local/bin
