--- a/home/.chezmoiscripts/run_onchange_after_configure-vscode.sh.tmpl
+++ b/home/.chezmoiscripts/run_onchange_after_configure-vscode.sh.tmpl
@@ -3,19 +3,9 @@
 {{ $extensions := list
      "eamodio.gitlens"
      "EditorConfig.EditorConfig"
-     "golang.go"
-     "jinliming2.vscode-go-template"
-     "ms-azuretools.vscode-docker"
      "ms-python.python"
-     "ms-vscode-remote.remote-containers"
-     "ms-vscode-remote.remote-ssh"
-     "ms-vscode-remote.remote-ssh-edit"
-     "ms-vscode-remote.vscode-remote-extensionpack"
-     "ms-vscode.cpptools"
      "redhat.vscode-yaml"
      "streetsidesoftware.code-spell-checker"
-     "tamasfe.even-better-toml"
-     "Tyriar.sort-lines"
      "yzhang.markdown-all-in-one"
      "VOSCA.vscode-v-analyzer"
 -}}
@@ -29,7 +19,7 @@ code --force --install-extension {{ . }}
 {{ end -}}
 
 SETTINGS_PATH="$HOME/.config/Code/User/settings.json"
-FONT_FAMILY="'Hack Nerd Font Mono', 'Droid Sans Mono', 'monospace'"
+FONT_FAMILY="'Hack Nerd Font Mono', 'Droid Sans Mono', 'monospace', monospace"
 
 # Check if jq is installed
 if ! command -v jq &>/dev/null; then
