refactor: Remove deprecated community tools verification script and enhance Waybar configuration with new styles and scripts

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-packages.sh.tmpl
@@ -27,6 +27,7 @@ set -eufo pipefail
   "cliphist"
   "pavucontrol"
   "wofi"
+  "power-profiles-daemon"
 -}}
 
 {{ $aurPackages := list
@@ -51,6 +52,7 @@ set -eufo pipefail
   "yad"
   "hyprlock"
   "hypridle"
+  "lxqt-config"
 ) -}}
 
 {{ $aurPackages = concat $aurPackages (list
@@ -63,7 +65,6 @@ set -eufo pipefail
   "nwg-look"
   "nwg-displays"
   "poweralertd"
-  "dynamic-power-daemon"
 ) -}}
 {{ end -}}
 
