--- a/home/.chezmoiscripts/linux/run_onchange_before_install-xdg.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-xdg.tmpl
@@ -6,7 +6,8 @@
 sudo pacman -S --noconfirm --needed \
   python-pyxdg \
   exo \
-  xdg-user-dirs
+  xdg-user-dirs \
+  handlr-regex
 
 yay -S --noconfirm --needed \
   xdg-autostart
