--- a/home/dot_config/waybar/configs/default/style.css.tmpl
+++ b/home/dot_config/waybar/configs/default/style.css.tmpl
@@ -26,7 +26,8 @@
 #custom-jgmenu,
 #custom-apps,
 #custom-window-switch,
-#custom-rices {
+#custom-rices,
+#custom-audio-header {
 	font-size: 22px;
 }
 
@@ -185,10 +186,11 @@ window#waybar.bottom {
 }
 
 /* ==========================================================================
- * Audio
+ * Audio & Brightness Groups
  * ==========================================================================
  */
-/* Groups for volume and backlight with slider */
+/* Groups for audio (collapsible) and backlight */
+box#audio,
 box#volume,
 box#backlight {
 	background: transparent;
@@ -199,15 +201,39 @@ box#backlight {
 	transition: all 0.2s ease;
 }
 
-box#volume:hover,
-box#backlight:hover {
+box#audio:hover {
+	background-color: @bg-hover;
+	border-color: rgba(235, 103, 152, 0.5);
+}
+
+box#volume:hover {
 	background-color: @bg-hover;
 	border-color: rgba(249, 181, 90, 0.5);
+}
+
+box#backlight:hover {
+	background-color: @bg-hover;
+	border-color: rgba(249, 226, 90, 0.5);
 }
 
 box#volume:hover #pulseaudio,
 box#backlight:hover #backlight {
 	color: @smart-orange;
+}
+
+/* Audio header styling */
+#custom-audio-header {
+	color: @smart-pink;
+	font-size: 18px;
+	border-left: 2px solid @smart-pink;
+	padding-left: 4px;
+	margin-right: 4px;
+}
+
+/* First module indicators in collapsed groups */
+box#backlight > #backlight {
+	border-left: 2px solid @smart-yellow;
+	padding-left: 4px;
 }
 
 #pulseaudio,
