refactor: update lockscreen management to use hyprlock and improve documentation

--- a/home/.chezmoiscripts/linux/run_onchange_before_install-hyprland.sh.tmpl
+++ b/home/.chezmoiscripts/linux/run_onchange_before_install-hyprland.sh.tmpl
@@ -23,7 +23,7 @@ yay -S --noconfirm --needed \
 
 # Screen locking and idle management
 yay -S --noconfirm --needed \
-  swaylock-effects \
+  hyprlock \
   hypridle
 
 # Screenshots
